# STDISCM-PS4

./: CMakeLists.txt  CMakePresets.json  LADRIDO_PS3.cpp  README.md
proto/: ocr_service.proto
src/: MainWindow.cpp  MainWindow.h  OCRClient.cpp  OCRClient.h  OCRProcessor.cpp  OCRProcessor.h  OCRServer.cpp  OCRServer.h  OCRService.cpp  OCRService.h  ThreadPool.cpp  ThreadPool.h  main.cpp
